fixing mobile landing spacing

--- a/pages/Index.module.scss
+++ b/pages/Index.module.scss
@@ -62,7 +62,7 @@
 
     @media screen and (max-width: $mq-mobile-max) {
       margin-bottom: 180px;
-      padding: 110px $navGutter_mobile 0;
+      padding: 153px $navGutter_mobile 0;
 
       .divider {
         display: none;
